--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -5,6 +5,8 @@
     android:padding="8dp"
     android:layout_marginBottom="4dp"
     android:layout_marginTop="4dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginLeft="8dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?selectableItemBackground">
