--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -1,3 +1,4 @@
+<!--Thanks https://guides.codepath.com/android/Handling-Scrolls-with-CoordinatorLayout-->
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -14,7 +15,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:background="@color/theme_primary">
+        android:background="?colorPrimary">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
